<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.goran.prvaaplikacijabrainster.Main4Activity">



    <Button
        android:id="@+id/checknet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/checkinternet"/>

    <TextView
        android:id="@+id/nettext"
        android:layout_marginTop="10dp"
        android:layout_below="@id/checknet"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edttextlogin"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/internetnotchecked"/>

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:drawableLeft="@drawable/left_arrow"
        android:padding="5dp"
        android:text="@string/backact4"/>


</RelativeLayout>
